--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" oncontextmenu="return false">
+<html lang="en">
+	<!-- <html lang="en" oncontextmenu="return false"> -->
 <head>
+	<link rel="shortcut icon" href="#">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
@@ -13,15 +15,12 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
-
 	<script
 	  src="https://code.jquery.com/jquery-3.3.1.min.js"
 	  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 	  crossorigin="anonymous"></script>
-
 </head>
 <body>
-	<script type="application/javascript" src="{{ url_for('static', filename='/dist/lib.bundle.js') }}"></script>
 	<script>		
 		Window.games = [];
 
@@ -36,6 +35,9 @@
 
 	{% block body %}
 	{% endblock %}	
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script type="application/javascript" src="{{ url_for('static', filename='/js/lib.js') }}"></script>
 
 	<script type="text/javascript">
 		$('input').keypress(function(e){
