create modules for black boxing logic, stage to unzip object from boto3

--- a/templates/index.html
+++ b/templates/index.html
@@ -141,6 +141,7 @@
 									// 	.catch(error => console.log(error));
 							</script> -->
 						{% endif %}
+					{% endif %}
 
 					<!-- FOR DEPLOYED -->
 					{% if files[i].website %}
