stash image data fetch in exchange for browser fetch from url

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -125,5 +125,7 @@
 	</script>
 
 	{% include './includes/modals/project.html' %}
+	{% include './includes/modals/web.html' %}
+	{% include './includes/modals/present.html' %}
 </body>
 </html>
