--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 		
 		<div class="synop">
 			<h2 class="orb codepro">Synopsis</h2>
-			<div style="height: 70%; font-size: 7pt;; margin: 0;" class="pressStart betweened">
+			<div style="height: 70%; font-size: 7pt; margin: 0;" class="pressStart betweened">
 				<div style="width: 100%">
 					<h3 class="title" style="text-decoration: underline; width: 100%;">Hover Over an App! >></h3>
 					<p class="article description">Hover over an app! >></p>
