--- a/static/styles/modalbox.css
+++ b/static/styles/modalbox.css
@@ -1,3 +1,57 @@
+.slider {
+  display: flex;
+  width: 100%; 
+  height: 100%;
+}
+
+.slideImage {
+  height: 240px;
+  margin-top: 10px;
+  width: 95%;
+  border: double 5px white;
+}
+
+.slideCard.active {
+  display: flex;
+}
+
+.slideCard > p {
+  background-color: white;
+  width: 80%;
+  height: 100px;
+  padding: 15px;
+  border: double 5px;
+  font-family: 'Press Start 2P', cursive;
+}
+
+.slideCard {
+  width: 100%;
+  height: 100%;
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: black;
+}
+
+.prev, .next {
+  border-radius: 3px;
+  text-decoration: none;
+  background-color: white;
+  font-family: 'Press Start 2P', cursive;
+  border: outset 5px;
+}
+
+.prev:visited, .next:visited {
+  color: black;
+}
+.prev:hover, .next:hover {
+  background-color: pink;
+}
+.prev:actived, .next:active {
+  filter: invert(1);
+}
+
 /* The Modal (background) */
 .modal {
   position: fixed; /* Stay in place */
@@ -36,6 +90,7 @@
   min-width: 300px;
   margin: auto; 
   padding: 20px;
+  margin-top: 15px;
   position: relative;
   height: 85%;
   z-index: 9999;
@@ -49,6 +104,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+  position: relative;
   width: 100%;
 }
 
