--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -117,17 +117,17 @@ body {
 	min-width: 200px; 
 	width: 95%; 
 	min-height: 520px; 
-	background-image: url('./images/jpgresume.jpg'); 
+	background-image: url('../images/jpgresume.jpg'); 
 	background-position: center; 
 	background-size: cover;
 }
 .school {
-	background-image: url('./images/img_class.jpg');
+	background-image: url('../images/img_class.jpg');
 	min-height: 100vh;
 }
 
 .theLib {
-	background-image: url('./images/library.jpg');
+	background-image: url('../images/library.jpg');
 	filter: blur(3px);
 	min-height: 400px;
 	width: 100%;
@@ -246,7 +246,7 @@ body {
 }
 
 .purp {
-	background-image: url('./images/img_clock1.jpg');
+	background-image: url('../images/img_clock1.jpg');
 	min-height: 400px;
 	width: 100%;
 }
@@ -256,7 +256,7 @@ body {
 }
 
 .icon {
-	background-image: url('./images/WARFACE.jpg');
+	background-image: url('../images/WARFACE.jpg');
 	background-size: cover; 
 	background-position: 10px 0px; 
 	background-repeat: no-repeat; 
@@ -440,7 +440,7 @@ nav {
 	width: 100%;
 	height: 100vh;
 	z-index: -2;
-	background: url('./images/img_clock1.jpg') no-repeat center center;
+	background: url('../images/img_clock1.jpg') no-repeat center center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
