--- a/static/styles/modalbox.css
+++ b/static/styles/modalbox.css
@@ -58,6 +58,7 @@
   z-index: 10; /* Sit on top */
   left: 0;
   top: 0;
+  min-width: 600px;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
