hotfix slide modal max width, stage for prod

--- a/templates/includes/modals/present.html
+++ b/templates/includes/modals/present.html
@@ -1,5 +1,5 @@
 <div class="modal" style="display: none;" id="presentation_modal">
-  <div class="modal-content">
+  <div class="modal-content" style="max-width: 840px;">
     <a href="#" class="close" onclick="handleClose('presentation_modal')">X</a>
     <div class="border">
       <div class="slider" id="presentation_model_container">
